--- a/index.html
+++ b/index.html
@@ -429,15 +429,16 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">oxttor@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(+91) 7222015930</a>
+									<a href="#">(+91) 8269298021</a>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>Tilak Public school behind fairmont hotel near talle walle hanuman mandir, chimanpura, delhi road, jaipur (302028)</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
