--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<h2>Magna sed nullam nisl adipiscing</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p><strong>Facility</strong> An average Indian household today uses at many types of electrical, electronic appliances and computer devices of the brands & everyday each individual faces such small or big problems. Over goal to help consumers to safely repair And replace and installation there equipment. But this company also help to other companies to repair , installation and replace there equipment. The main motive of over serviceman, go to consumer equipment repair place. And check that equipment. if possible that this equipment repair on this place then service man repair it. if not possible, it will be repaired for 2 days.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
