--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!-- Wrapper -->
 <div id="wrapper"><!-- Intro -->
 <section class="intro"><header>
-<h1>Oxttor Online Service</h1>
+<h1>Oxttor Online Services</h1>
 <p>Door to door facility <a href="www.oxttor@gmail.com">@oxttor</a></p>
 <ul class="actions">
 <li><a class="arrow scrolly" href="#first"><span class="label">Next</span></a></li>
