--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 						</header>
 						<div class="content">
 							<p><strong>An</strong> average Indian household today uses at many types of electrical, electronic appliances and computer devices of the brands &amp; everyday each individual faces such small or big problems. Over goal to help consumers to safely repair And replace and installation there equipment. But this company also help to other companies to repair , installation and replace there equipment. The main motive of over serviceman, go to consumer equipment repair place. And check that equipment. if possible that this equipment repair on this place then service man repair it. if not possible, it will be repaired for 2 days.</p>
-<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+<span class="image main"><img src="images/pic02.png" alt="" /></span>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2>Feugiat consequat tempus ultrices</h2>
+							<h2>Why Choose Us?</h2>
 						</header>
 						<div class="content">
 							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
@@ -429,15 +429,15 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+								 <a href="#">oxttor@gmail.com</a></li>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(+91) 7222015930/</a> <a href="#">(+91) 8269298021</a></li>
 								</li>
 								<li>
 									<h3>Address</h3>
-									<span>1234 Somewhere Road, Nashville, TN 00000</span>
+									<span>Tilak Public school behind fairmont hotel near talle walle hanuman mandir, chimanpura, delhi road, jaipur (302028)</span>
 								</li>
 								<li>
 									<h3>Elsewhere</h3>
@@ -455,7 +455,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://oxttor.com">Oxttor</a>.</div>
 
 			</div>
 
