--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						</header>
 						<div class="content">
 							<p><strong>An</strong> average Indian household today uses at many types of electrical, electronic appliances and computer devices of the brands &amp; everyday each individual faces such small or big problems. Over goal to help consumers to safely repair And replace and installation there equipment. But this company also help to other companies to repair , installation and replace there equipment. The main motive of over serviceman, go to consumer equipment repair place. And check that equipment. if possible that this equipment repair on this place then service man repair it. if not possible, it will be repaired for 2 days.</p>
-<span class="image main"><img src="images/pic02.png" alt="" /></span>
+<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
 
@@ -79,7 +79,7 @@
 									<div class="content">
 										<div class="gallery">
 											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.png"><img src="images/gallery/thumbs/02.png" alt="" /></a>
+											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
 											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 										</div>
