oxttor-replace order summary image

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<header>
 							<h2>Contact Us</h2>
 						</header>
-						<div class="content">
+						<!--<div class="content">
 							<p><strong>Our convenient repair company</strong> is the best electronic repair organization in Jaipur. We are a certified electrical equipment, upgrade and trading center designed to make your life easier: that's why we also make it easy to contact us and get here. We can also provide free consultation and quotation by phone.</p>
 							<form>
 								<div class="fields">
@@ -434,16 +434,16 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<li><input type="submit" value="Send Message" class="button primary" /></li>
 								</ul>
 							</form>
-						</div>
+						</div>-->
 						<footer>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-								 <a href="#">oxttor@gmail.com</a></li>
+								 <a href="https://www.gmail.com/">oxttor@gmail.com</a></li>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(+91) 7222015930/</a> <a href="#">(+91) 8269298021</a></li>
+									<a>(+91) 7222015930</a> <a>(+91) 8269298021</a></li>
 								</li>
 								<li>
 									<h3>Address</h3>
