--- a/SearchEverythings.html
+++ b/SearchEverythings.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/searcheverythings.css" />
 	</head>
 	<body class="is-preload">
 
@@ -34,10 +34,10 @@
 
 				<section>
 						<header>
-							<h2></h2>
+							<h2>Privacy Policy!</h2>
 						</header>
 						<div class="content">
-						<p><strong>Privacy Policy!</strong> </p>
+						<p><strong></strong> </p>
 							<p><strong></strong>
 SM Tech. built the Search Everythings app as an Ad Supported app. This SERVICE is provided by SM Tech. at no cost and is intended for use as is.
 
